--- a/static/site.css
+++ b/static/site.css
@@ -8,24 +8,25 @@
 
 /*------------------------------------------------------------------- */
 
-/* LAYOUT CSS */
+/* ----- Layout Functions ----- */
 
-html {
-	height: 100%;
-	overflow: hidden;
+.hide {
+	display: none;
 }
 
-body {
-	margin: 0;
-	padding: 0;
-	height: inherit;
-	overflow: hidden;
-	background-color: #fff;
+.align-right {
+	margin-left: auto;
 }
 
-h1 {
-	font-family: sans-serif;
-	font-size: 120px;
-	color: blueviolet;
+.align-left {
+	margin-right: auto;
 }
+
+.site-wrapper {
+	display: flex;
+	flex-wrap: nowrap;
+	margin: 0 auto;
+	max-width: calc(1240px + 32px);
+}
+
 
