--- a/static/grid.css
+++ b/static/grid.css
@@ -26,40 +26,28 @@ body {
 /* Mobile */
 @media screen and (min-width: 0px)  {
 
-
-}
-
-/* Tablet */
-@media screen and (min-width: 720px)  {
-
-
-}
-
-/* Desktop */
-@media screen and (min-width: 0px)  {
-
 	.col-1 {
-	flex-basis: calc(8.333% - 32px);
+	flex-basis: calc(49.998% - 32px);
 	margin: 0 16px;
 	}
 
 	.col-2 {
-	flex-basis: calc(16.666% - 32px);
+	flex-basis: calc(49.998% - 32px);
 	margin: 0 16px;
 	}
 
 	.col-3 {
-	flex-basis: calc(24.999% - 32px);
+	flex-basis: calc(49.998% - 32px);
 	margin: 0 16px;
 	}
 
 	.col-4 {
-	flex-basis: calc(33.332% - 32px);
+	flex-basis: calc(49.998% - 32px);
 	margin: 0 16px;
 	}
 
 	.col-5 {
-	flex-basis: calc(41.665% - 32px);
+	flex-basis: calc(49.998% - 32px);
 	margin: 0 16px;
 	}
 
@@ -69,33 +57,140 @@ body {
 	}
 
 	.col-7 {
-	flex-basis: calc(58.331% - 32px);
+	flex-basis: calc(99.996% - 32px);
 	margin: 0 16px;
 	}
 
 	.col-8 {
-	flex-basis: calc(66.664% - 32px);
+	flex-basis: calc(99.996% - 32px);
 	margin: 0 16px;
 	}
 
 	.col-9 {
-	flex-basis: calc(74.997% - 32px);
+	flex-basis: calc(99.996% - 32px);
 	margin: 0 16px;
 	}
 
 	.col-10 {
-	flex-basis: calc(83.33% - 32px);
+	flex-basis: calc(99.996% - 32px);
 	margin: 0 16px;
 	}
 
 	.col-11 {
-	flex-basis: calc(91.663% - 32px);
+	flex-basis: calc(99.996% - 32px);
 	margin: 0 16px;
 	}
 
 	.col-12 {
 	flex-basis: calc(99.996% - 32px);
 	margin: 0 16px;
+	}
+
+
+}
+
+/* Tablet */
+@media screen and (min-width: 720px)  {
+
+	.col-1 {
+	flex-basis: calc(33.332% - 32px);
+	}
+
+	.col-2 {
+	flex-basis: calc(33.332% - 32px);
+	}
+
+	.col-3 {
+	flex-basis: calc(33.332% - 32px);
+	}
+
+	.col-4 {
+	flex-basis: calc(33.332% - 32px);
+	}
+
+	.col-5 {
+	flex-basis: calc(49.998% - 32px);
+	}
+
+	.col-6 {
+	flex-basis: calc(49.998% - 32px);
+	}
+
+	.col-7 {
+	flex-basis: calc(66.664% - 32px);
+	}
+
+	.col-8 {
+	flex-basis: calc(66.664% - 32px);
+	}
+
+	.col-9 {
+	flex-basis: calc(99.996% - 32px);
+	}
+
+	.col-10 {
+	flex-basis: calc(99.996% - 32px);
+	}
+
+	.col-11 {
+	flex-basis: calc(99.996% - 32px);
+	}
+
+	.col-12 {
+	flex-basis: calc(99.996% - 32px);
+	}
+
+}
+
+/* Desktop */
+@media screen and (min-width: 1280px)  {
+
+	.col-1 {
+	flex-basis: calc(8.333% - 32px);
+	}
+
+	.col-2 {
+	flex-basis: calc(16.666% - 32px);
+	}
+
+	.col-3 {
+	flex-basis: calc(24.999% - 32px);
+	}
+
+	.col-4 {
+	flex-basis: calc(33.332% - 32px);
+	}
+
+	.col-5 {
+	flex-basis: calc(41.665% - 32px);
+	}
+
+	.col-6 {
+	flex-basis: calc(49.998% - 32px);
+	}
+
+	.col-7 {
+	flex-basis: calc(58.331% - 32px);
+	}
+
+	.col-8 {
+	flex-basis: calc(66.664% - 32px);
+	}
+
+	.col-9 {
+	flex-basis: calc(74.997% - 32px);
+	}
+
+	.col-10 {
+	flex-basis: calc(83.33% - 32px);
+	}
+
+	.col-11 {
+	flex-basis: calc(91.663% - 32px);
+	}
+
+	.col-12 {
+	flex-basis: calc(99.996% - 32px);
 	}
 
 }
@@ -119,6 +214,7 @@ body {
 }
 
 #grid > .col-1 {
+	flex-basis: calc(8.333% - 32px);
 	background-color: mediumpurple;
 	opacity: 0.5;
 }
