--- a/static/responsive.css
+++ b/static/responsive.css
@@ -176,10 +176,26 @@
 		line-height: 30px;
 	}
 
-	a.button {
+	.button-link {
 		font-size: 16px;
 		line-height: 28px;
 		font-weight: 600;
+	}
+
+	.button {
+		font-size: 16px;
+		line-height: 28px;
+		font-weight: 600;
+		background: var(--AzureRadiance);
+		padding: 12px 32px;
+		border-radius: 24px;
+	}
+
+	.button > img {
+		widows: 16px;
+		height: 16px;
+		vertical-align: middle;
+		margin: 0 0 3px 12px;
 	}
 
 	p.caption {
@@ -349,7 +365,13 @@
 		line-height: 30px;
 	}
 
-	a.button {
+	.button-link {
+		font-size: 16px;
+		line-height: 28px;
+		font-weight: 600;
+	}
+
+	.button {
 		font-size: 16px;
 		line-height: 28px;
 		font-weight: 600;
@@ -502,7 +524,13 @@
 		line-height: 30px;
 	}
 
-	a.button {
+	.button-link {
+		font-size: 16px;
+		line-height: 28px;
+		font-weight: 600;
+	}
+
+	.button {
 		font-size: 16px;
 		line-height: 28px;
 		font-weight: 600;
