Initial footer integration with transition

--- a/static/site.css
+++ b/static/site.css
@@ -68,6 +68,7 @@ body {
 
 .align-right {
 	margin-left: auto;
+	margin-right: 16px;
 }
 
 .left-1 {
@@ -88,5 +89,27 @@ body {
 	color: var(--White);
 	margin-top: 1rem;
 	margin-bottom: 1rem;
+}
+
+.footer {
+	color: var(--White);
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
+.button-margin {
+	margin-top: 1.15rem;
+}
+
+.portfolio-link {
+	width: 24px;
+	height: 24px;
+	opacity: 50%;
+	transition: 0.4s;
+}
+
+.portfolio-link:hover {
+	color: aqua;
+	transition: 0.4s;
 }
 
