--- a/static/responsive.css
+++ b/static/responsive.css
@@ -200,12 +200,12 @@
 		margin: 0 0 3px 12px;
 	}
 
-	p.caption {
+	.caption {
 		font-size: 14px;
 		line-height: 26px;
 	}
 
-	p.kicker {
+	.kicker {
 		font-size: 14px;
 		line-height: 24px;
 		margin-top: 0.5rem;
@@ -359,12 +359,12 @@
 		line-height: 28px;
 	}
 
-	p.caption {
+	.caption {
 		font-size: 14px;
 		line-height: 26px;
 	}
 
-	p.kicker {
+	.kicker {
 		font-size: 14px;
 		line-height: 24px;
 	}
@@ -493,12 +493,12 @@
 		line-height: 28px;
 	}
 
-	p.caption {
+	.caption {
 		font-size: 14px;
 		line-height: 26px;
 	}
 
-	p.kicker {
+	.kicker {
 		font-size: 14px;
 		line-height: 24px;
 	}
