--- a/static/responsive.css
+++ b/static/responsive.css
@@ -184,6 +184,13 @@
 		font-weight: 600;
 	}
 
+	.button-link > img {
+		widows: 16px;
+		height: 16px;
+		vertical-align: middle;
+		margin: 0 0 3px 12px;
+	}
+
 	.button {
 		font-size: 16px;
 		line-height: 28px;
