--- a/static/site.css
+++ b/static/site.css
@@ -58,6 +58,11 @@ body {
 	font-size: 18px;
 }
 
+a {
+	text-decoration: none;
+	color: var(--White);
+}
+
 /* ----- Layout Functions ----- */
 
 
@@ -77,27 +82,40 @@ body {
 	.header {
 		color: var(--White);
 		margin-top: 1rem;
-		margin-bottom: 1rem;
+		margin-bottom: 0.5rem;
 	}
 
 	.content {
 		color: var(--White);
-		margin-top: 1rem;
+		margin-top: 8vh;
 		margin-bottom: 1rem;
 	}
 
 	.footer {
 		color: var(--White);
-		margin-top: 1rem;
+		margin-top: 3rem;
 		margin-bottom: 1rem;
-		vertical-align: middle
+		vertical-align: middle;
 	}
 
 	.button-margin {
 		margin-top: 1.15rem;
 	}
 
+	.mobile-hide {
+		display: none;
+	}
+
+	.fullpage-wrapper {
+		height: auto;
+	}
+
+	.hero-logo {
+	height: 32px;
+	}
 }
+
+
 
 /* Tablet */
 @media screen and (min-width: 720px) {
@@ -110,31 +128,96 @@ body {
 		margin-left: 16px;
 	}
 
+	.mobile-hide {
+		display: inherit;
+	}
+
+	.fullpage-wrapper {
+		height: calc(100% - 4rem);
+	}
+
+	.footer {
+		margin-top: 1rem;
+	}
+
+	.content {
+		margin-top: 18vh;
+	}
+
+	.hero-logo {
+		height: 40px;
+
+}
+
 }
 
 /* Desktop */
 @media screen and (min-width: 1280px) {
+	.content {
+		margin-top: 22vh;
+	}
 
-
+	.background-image {
+		z-index: -10;
+		width: 90%;
+		position: absolute;
+		bottom: 0;
+		margin: auto;
+	}
 
 }
 
+.contact-link {
+	padding-top: 0.25rem;
+	opacity: 0.35;
+	transition: 0.3s;
+}
+
+.contact-link:hover {
+	opacity: 100;
+	transition: 0.3s;
+}
 
 
-.footer-link {
+.portfolio-link {
 	width: 24px;
 	margin: 2px 0 0 0;
 	opacity: 15%;
 	transition: 0.3s;
 }
 
-.footer-link:hover {
-	opacity: 75%;
+.portfolio-link:hover {
+	opacity: 100%;
 	transition: 0.3s;
 }
 
-.social-icon {
-	width: 20px;
+.social-icons {
+	width: 18px;
 	vertical-align: middle;
-	margin: 0 0 4px 12px
+	margin: 0 0 2px 10px;
+	opacity: 100%;
+	transition: 0.3s;
+}
+
+.social-icons:hover {
+	opacity: 100%;
+	transition: 0.3s;
+}
+
+span + .social-icons {
+	margin: 0 0 2px 0px;
+}
+
+.caption > span {
+	opacity: 35%;
+}
+
+.caption > a {
+	opacity: 35%;
+	transition: 0.3s;
+}
+
+.caption > a:hover {
+	opacity: 100%;
+	transition: 0.3s;
 }
