--- a/static/responsive.css
+++ b/static/responsive.css
@@ -12,128 +12,120 @@
 /* ----- Responsive ----- */
 
 /* Mobile */
-@media screen and (min-width: 0px)  {
+@media screen and (min-width: 0px) {
 
 	/* -- Grid overlay - Mobile -- */
 
 	#grid {
-	height: 100%;
-	display: flex;
-	flex-wrap: nowrap;
-	margin: 0 24px;
+		height: 100%;
+		display: flex;
+		flex-wrap: nowrap;
+		margin: 0 24px;
 	}
 
 	#grid-wrapper {
-	width: 100%;
-	height: 100%;
-	flex: none;
-	position: absolute;
-	z-index: 999;
-	pointer-events: none;
+		width: 100%;
+		height: 100%;
+		flex: none;
+		position: absolute;
+		z-index: 999;
+		pointer-events: none;
 	}
 
 	#grid > .col-1 {
-	flex-basis: calc(8.333% - 16px);
-	background-color: yellow;
-	opacity: 0.2;
+		flex-basis: calc(8.333% - 16px);
+		background-color: yellow;
+		opacity: 0.2;
 	}
 
 	/* -- Grid - Mobile -- */
 
 	.wrapper {
-	display: flex;
-	flex-wrap: nowrap;
-	margin: 0 24px;
+		display: flex;
+		flex-wrap: nowrap;
+		margin: 0 24px;
 	}
 
-	.wrapper > div {
+	.wrapper > div:not(.background-image) {
 		max-width: calc(99.996% - 16px);
 	}
 
 	.col-1 {
-	flex-basis: calc(49.998% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(49.998% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-2 {
-	flex-basis: calc(49.998% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(49.998% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-3 {
-	flex-basis: calc(49.998% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(49.998% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-4 {
-	flex-basis: calc(49.998% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(49.998% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-5 {
-	flex-basis: calc(49.998% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(49.998% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-6 {
-	flex-basis: calc(49.998% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(49.998% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-7 {
-	flex-basis: calc(99.996% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(99.996% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-8 {
-	flex-basis: calc(99.996% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(99.996% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-9 {
-	flex-basis: calc(99.996% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(99.996% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-10 {
-	flex-basis: calc(99.996% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(99.996% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-11 {
-	flex-basis: calc(99.996% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(99.996% - 16px);
+		margin: 0 8px;
 	}
 
 	.col-12 {
-	flex-basis: calc(99.996% - 16px);
-	margin: 0 8px;
+		flex-basis: calc(99.996% - 16px);
+		margin: 0 8px;
 	}
 
 	/* -- Typography - Mobile -- */
 
 	h1 {
-		font-size: 56px;
-		line-height: 66px;
+		font-size: 36px;
+		line-height: 46px;
 		font-weight: 700;
 		margin-top: 0.5rem;
 		margin-bottom: .5rem;
 	}
 
 	h1.h1-plus {
-		font-size: 74px;
-		line-height: 84px;
+		font-size: 44px;
+		line-height: 54px;
 	}
 
 	h2 {
-		font-size: 40px;
-		line-height: 50px;
-		font-weight: 700;
-		margin-top: 1rem;
-		margin-bottom: .5rem;
-	}
-
-	h3 {
 		font-size: 30px;
 		line-height: 40px;
 		font-weight: 700;
@@ -141,46 +133,54 @@
 		margin-bottom: .5rem;
 	}
 
+	h3 {
+		font-size: 26px;
+		line-height: 36px;
+		font-weight: 700;
+		margin-top: 1rem;
+		margin-bottom: .5rem;
+	}
+
 	h4 {
-		font-size: 24px;
-		line-height: 34px;
+		font-size: 22px;
+		line-height: 32px;
 		font-weight: 700;
 		margin-top: 1rem;
 		margin-bottom: .5rem;
 	}
 
 	h5 {
-		font-size: 20px;
-		line-height: 30px;
+		font-size: 18px;
+		line-height: 28px;
 		font-weight: 700;
 		margin-top: 1rem;
 		margin-bottom: .5rem;
 	}
 
 	h6 {
-		font-size: 20px;
-		line-height: 30px;
+		font-size: 18px;
+		line-height: 28px;
 		font-weight: 500;
 		margin-top: 1rem;
 		margin-bottom: .5rem;
 	}
 
 	p {
-		font-size: 16px;
-		line-height: 28px;
+		font-size: 14px;
+		line-height: 26px;
 		font-weight: 500;
 		margin-top: 1rem;
 		margin-bottom: .5rem;
 	}
 
 	p.p-plus {
-		font-size: 18px;
-		line-height: 30px;
+		font-size: 16px;
+		line-height: 28px;
 	}
 
 	.button-link {
-		font-size: 16px;
-		line-height: 28px;
+		font-size: 14px;
+		line-height: 26px;
 		font-weight: 600;
 	}
 
@@ -192,12 +192,13 @@
 	}
 
 	.button {
-		font-size: 16px;
+		font-size: 14px;
 		line-height: 28px;
 		font-weight: 600;
 		background: var(--AzureRadiance);
 		padding: 12px 32px;
 		border-radius: 24px;
+		transition: 0.3s;
 	}
 
 	.button > img {
@@ -208,13 +209,13 @@
 	}
 
 	.caption {
-		font-size: 14px;
-		line-height: 26px;
+		font-size: 12px;
+		line-height: 24px;
 	}
 
 	.kicker {
-		font-size: 14px;
-		line-height: 24px;
+		font-size: 12px;
+		line-height: 22px;
 		margin-top: 0.5rem;
 		margin-bottom: .25rem;
 		letter-spacing: 2px;
@@ -227,7 +228,7 @@
 }
 
 /* Tablet */
-@media screen and (min-width: 720px)  {
+@media screen and (min-width: 720px) {
 
 	/* -- Grid overlay - Tablet -- */
 
@@ -245,68 +246,68 @@
 		margin: 0 32px;
 	}
 
-	.wrapper > div {
+	.wrapper > div:not(.background-image) {
 		max-width: calc(1240px + 32px);
 	}
 
 	.col-1 {
-	flex-basis: calc(33.332% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(33.332% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-2 {
-	flex-basis: calc(33.332% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(33.332% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-3 {
-	flex-basis: calc(33.332% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(33.332% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-4 {
-	flex-basis: calc(33.332% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(33.332% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-5 {
-	flex-basis: calc(49.998% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(49.998% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-6 {
-	flex-basis: calc(49.998% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(49.998% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-7 {
-	flex-basis: calc(66.664% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(99.996% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-8 {
-	flex-basis: calc(66.664% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(99.996% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-9 {
-	flex-basis: calc(99.996% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(99.996% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-10 {
-	flex-basis: calc(99.996% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(99.996% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-11 {
-	flex-basis: calc(99.996% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(99.996% - 32px);
+		margin: 0 16px;
 	}
 
 	.col-12 {
-	flex-basis: calc(99.996% - 32px);
-	margin: 0 16px;
+		flex-basis: calc(99.996% - 32px);
+		margin: 0 16px;
 	}
 
 	/* -- Typography - Tablet -- */
@@ -378,8 +379,18 @@
 
 }
 
+/* Landing Hero - Extra Step */
+@media screen and (min-width: 1080px) {
+	.col-8 {
+		flex-basis: calc(66.664% - 32px);
+		margin: 0 16px;
+	}
+
+}
+
+
 /* Desktop */
-@media screen and (min-width: 1280px)  {
+@media screen and (min-width: 1280px) {
 
 	/* -- Grid overlay - Desktop -- */
 
@@ -400,7 +411,7 @@
 	}
 
 	.col-2 {
-	flex-basis: calc(16.666% - 32px);
+		flex-basis: calc(16.666% - 32px);
 	}
 
 	.col-3 {
@@ -512,7 +523,7 @@
 
 }
 
-@media screen and (min-width: 1366px)  {
+@media screen and (min-width: 1366px) {
 
 	/* -- Grid overlay - Desktop -- */
 
