--- a/static/site.css
+++ b/static/site.css
@@ -182,7 +182,7 @@ a {
 /* Desktop */
 @media screen and (min-width: 1280px) {
 	.content {
-		margin-top: 17vh;
+		margin-top: 18vh;
 	}
 
 	.background-image > img {
@@ -224,7 +224,7 @@ a {
 .portfolio-link {
 	width: 24px;
 	margin: 2px 0 0 0;
-	opacity: 15%;
+	opacity: 30%;
 	transition: 0.3s;
 }
 
@@ -237,7 +237,7 @@ a {
 	width: 18px;
 	vertical-align: middle;
 	margin: 0 0 2px 10px;
-	opacity: 100%;
+	opacity: 75%;
 	transition: 0.3s;
 }
 
@@ -251,11 +251,11 @@ span + .social-icons {
 }
 
 .caption > span {
-	opacity: 50%;
+	opacity: 60%;
 }
 
 .caption > a {
-	opacity: 50%;
+	opacity: 60%;
 	transition: 0.3s;
 }
 
@@ -265,6 +265,6 @@ span + .social-icons {
 }
 
 .button:hover {
-	background: var(--BahamaBlue);
+	background-color: var(--BahamaBlue);
 	transition: 0.3s;
 }
