--- a/static/site.css
+++ b/static/site.css
@@ -132,6 +132,69 @@ a {
 		margin: 0 0 0 -90vw;
 	}
 
+	#modal {
+		background-color: var(--White);
+	}
+
+	.modal {
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 525px;
+		max-width: 100%;
+		height: 60%;
+		max-height: 100%;
+		border-radius: 16px;
+		-webkit-box-shadow: 0px 0px 0px 8px rgba(34, 34, 34, 0.3);
+		-moz-box-shadow: 0px 0px 8px 8px rgba(34, 34, 34, 0.3);
+		box-shadow: 0px 0px 8px 8px rgba(34, 34, 34, 0.3);
+		overflow: hidden;
+		z-index: 10;
+	}
+
+	.techman-wrapper {
+		top: 0;
+		left: 0;
+		width: calc(100% - 1rem);
+		height: calc(100% - 50px);
+		overflow: auto;
+		max-height: 100%;
+		padding: 0 0.5rem;
+	}
+
+	.modal-overlay {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 5;
+		background-color: black;
+		opacity: 0.5;
+	}
+
+	.modal-controls {
+		width: 100%;
+		height: 40px;
+		display: flex;
+		background-color: var(--Onahau);
+	}
+
+	.modal-controls > span {
+		margin-top: auto;
+		margin-bottom: auto;
+	}
+
+	.kicker.label {
+		font-size: 10px;
+		opacity: 60%;
+	}
+
+	.caption.label {
+		font-size: 12px;
+	}
+
 }
 
 
