--- a/static/responsive.css
+++ b/static/responsive.css
@@ -112,6 +112,10 @@
 
 	/* -- Typography - Mobile -- */
 
+	h1, h2, h3, h4, h5, h6, p {
+		color: var(--Rhino);
+	}
+
 	h1 {
 		font-size: 36px;
 		line-height: 46px;
@@ -129,8 +133,8 @@
 		font-size: 30px;
 		line-height: 40px;
 		font-weight: 700;
-		margin-top: 1rem;
-		margin-bottom: .5rem;
+		margin-top: 0.5rem;
+		margin-bottom: 1rem;
 	}
 
 	h3 {
@@ -168,20 +172,21 @@
 	p {
 		font-size: 14px;
 		line-height: 26px;
-		font-weight: 500;
-		margin-top: 1rem;
-		margin-bottom: .5rem;
+		font-weight: 400;
+		margin-top: .5rem;
+		margin-bottom: 1rem;
 	}
 
 	p.p-plus {
 		font-size: 16px;
 		line-height: 28px;
+		font-weight: 400;
 	}
 
 	.button-link {
 		font-size: 14px;
 		line-height: 26px;
-		font-weight: 600;
+		font-weight: 500;
 	}
 
 	.button-link > img {
@@ -194,7 +199,8 @@
 	.button {
 		font-size: 14px;
 		line-height: 28px;
-		font-weight: 600;
+		font-weight: 500;
+		color: var(--White) !important;
 		background-color: var(--AzureRadiance);
 		padding: 12px 32px;
 		border-radius: 24px;
