--- a/static/site.css
+++ b/static/site.css
@@ -55,15 +55,12 @@ body {
 	margin: 0;
 	padding: 0;
     overflow-x: hidden;
-	overflow-y: scroll;
-	background: var(--Rhino-Gradient);
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Raleway', Helvetica,  sans-serif;
 	font-size: 18px;
 }
 
 a {
 	text-decoration: none;
-	color: var(--White);
 }
 
 :focus {
@@ -83,27 +80,30 @@ a {
 	.align-right {
 		margin-left: auto;
 		margin-right: 8px;
+		z-index: 1;
 	}
 
 	.align-left {
 		margin-right: auto;
 		margin-left: 8px;
+		z-index: 1;
 	}
 
-	.header {
+	#header {
 		color: var(--White);
-		margin-top: 1rem;
-		margin-bottom: 0.5rem;
+		background: var(--Rhino);
+		padding-top: 1rem;
+		padding-bottom: 0.5rem;
+		width: 100%;
 	}
 
 	.content {
 		color: var(--White);
-		margin-top: 8vh;
-		margin-bottom: 1rem;
 	}
 
 	.footer {
 		color: var(--White);
+		background: aqua;
 		margin-top: 1rem;
 		/* margin-bottom: 1rem; */
 		vertical-align: middle;
@@ -119,7 +119,7 @@ a {
 	}
 
 	.fullpage-wrapper {
-		height: calc(100% - 4.25rem);
+		height: 100%;
 	}
 
 	.hero-logo {
@@ -129,14 +129,15 @@ a {
 	.background-image {
 		width: 100%;
 		max-width: 100%;
-		position: absolute;
+		display: inline-block;
 		overflow: hidden;
-		z-index: -10;
+		z-index: 0;
 		bottom: 0;
 		left: 0;
+		margin-top: -7rem;
 	}
 
-	.background-image > img {
+	#sec-hero .background-image img {
 		width: 225vw;
 		margin: 0 0 0 -90vw;
 	}
@@ -245,7 +246,7 @@ a {
 	}
 
 	.fullpage-wrapper {
-		height: calc(100% - 4rem);
+		height: 100%;
 	}
 
 	.footer {
@@ -264,7 +265,7 @@ a {
 		margin-top: 1.15rem;
 	}
 
-	.background-image > img {
+	#sec-hero .background-image img {
 		width: auto;
 		max-height: 50vh;
 		margin: 0 -5vw;
@@ -284,7 +285,7 @@ a {
 		margin-top: 18vh;
 	}
 
-	.background-image > img {
+	#sec-hero .background-image img {
 		width: 100vw;
 		max-width: 1366px;
 		max-height: 100vh;
@@ -299,10 +300,29 @@ a {
 		margin-top: 18vh;
 	}
 
-	.background-image > img {
+	#sec-hero .background-image img {
 		margin: 0 25vh 0 0;
 	}
 
+}
+
+#sec-hero {
+	background: var(--Rhino-Gradient);
+	padding: 4rem 0 0 0;
+	color: var(--White);
+	margin-bottom: 4rem;
+}
+
+#sec-split {
+	margin: 4rem 0;
+}
+
+.split-img {
+	width: 100%;
+}
+
+#sec-split .wrapper {
+	align-items: center;
 }
 
 
@@ -313,6 +333,11 @@ a {
 	padding-top: 0.25rem;
 	opacity: 50%;
 	transition: 0.3s;
+	text-align: right
+}
+
+.contact-link a {
+	color: var(--White);
 }
 
 .contact-link:hover {
