--- a/static/responsive.css
+++ b/static/responsive.css
@@ -114,13 +114,13 @@
 
 	h1, h2, h3, h4, h5, h6, p {
 		color: var(--Rhino);
+		margin-top: 0rem;
 	}
 
 	h1 {
 		font-size: 36px;
 		line-height: 46px;
 		font-weight: 700;
-		margin-top: 0.5rem;
 		margin-bottom: .5rem;
 	}
 
@@ -133,15 +133,13 @@
 		font-size: 30px;
 		line-height: 40px;
 		font-weight: 700;
-		margin-top: 0.5rem;
-		margin-bottom: 1rem;
+		margin-bottom: .5rem;
 	}
 
 	h3 {
 		font-size: 26px;
 		line-height: 36px;
 		font-weight: 700;
-		margin-top: 1rem;
 		margin-bottom: .5rem;
 	}
 
@@ -149,7 +147,6 @@
 		font-size: 22px;
 		line-height: 32px;
 		font-weight: 700;
-		margin-top: 1rem;
 		margin-bottom: .5rem;
 	}
 
@@ -157,7 +154,6 @@
 		font-size: 18px;
 		line-height: 28px;
 		font-weight: 700;
-		margin-top: 1rem;
 		margin-bottom: .5rem;
 	}
 
@@ -165,7 +161,6 @@
 		font-size: 18px;
 		line-height: 28px;
 		font-weight: 500;
-		margin-top: 1rem;
 		margin-bottom: .5rem;
 	}
 
@@ -173,7 +168,6 @@
 		font-size: 14px;
 		line-height: 26px;
 		font-weight: 400;
-		margin-top: .5rem;
 		margin-bottom: 1rem;
 	}
 
