--- a/static/site.css
+++ b/static/site.css
@@ -61,6 +61,7 @@ body {
     overflow-x: hidden;
 	font-family: 'Raleway', Helvetica,  sans-serif;
 	font-size: 18px;
+	background-color: var(--White);
 }
 
 /* Mobile */
@@ -107,100 +108,194 @@ body {
 /* Mobile */
 @media screen and (min-width: 0px) {
 
-	#header {
+	.header {
 		color: var(--White);
 		background: var(--Rhino);
-		padding-top: 1rem;
+		padding-top: .5rem;
 		padding-bottom: 0.5rem;
 		width: 100%;
 	}
 
-	.footer {
+	.header ul .align-right {
+		margin: 0;
+		width: 100%;
+	}
+
+	.header div > .align-right {
+
+	}
+
+	.header ul .col-9 {
+		width: 100%;
+	}
+
+	.nav-menu {
+        position: fixed;
+        left: 0;
+		opacity: 0;
+        top: 0rem;
+        background: var(--BahamaBlue-Gradient);
+        width: calc(100% - 64px);
+		height: 100%;
+		padding:  25vh 32px 0px 32px;
+        text-align: center;
+		z-index: -1;
+    }
+
+    .nav-menu.active {
+        left: 0;
+		opacity: 1;
+		z-index: 2;
+		transition: 0.4s;
+
+    }
+
+	.header-logo {
+		height: 42px;
+	}
+
+	.nav-logo{
+		z-index: 3;
+	}
+
+	.header li {
+		display:block;
+		margin: 24px 0 0 0;
+	}
+
+	.header .button-link a {
+		margin: 0 0 0 0;
+		font-size: 22px;
+		font-weight: 400;
 		color: var(--White);
-		background: aqua;
-		margin-top: 1rem;
-		/* margin-bottom: 1rem; */
-		vertical-align: middle;
 	}
 
-	.hero-logo {
-		height: 32px;
+	.header .button  {
+		margin-top: 16px !important;
+		max-width: 320px;
+		margin: auto;
 	}
 
-	.contact-link {
-		padding-top: 0.25rem;
-		opacity: 50%;
-		transition: 0.3s;
-		text-align: right;
+	.header .secondary  {
+		margin-top: 24px !important;
 	}
 
-	.contact-link a {
-		color: var(--White);
-	}
+	.hamburger {
+        display: block;
+        cursor: pointer;
+		padding-top: 7px !important;
+		z-index: 3;
+		margin-right: 0 !important;
+    }
 
-	.contact-link:hover {
-		opacity: 100%;
-		transition: 0.3s;
-	}
+	.hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
 
-	.portfolio-link {
-		width: 24px;
-		margin: 2px 0 0 0;
-		opacity: 30%;
-		transition: 0.3s;
-	}
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
 
-	.portfolio-link:hover  {
-		opacity: 100%;
-		transition: 0.3s;
-	}
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
 
-	.social-icons {
-		width: 18px;
-		vertical-align: middle;
-		margin: 0 0 2px 10px;
-		opacity: 75%;
-		transition: 0.3s;
+	.bar {
+		display: block;
+		width: 28px;
+		height: 2px;
+		margin: 6px auto;
+		-webkit-transition: all 0.3s ease-in-out;
+		transition: all 0.3s ease-in-out;
+		background-color: var(--White);
 	}
-
-	.social-icons:hover {
-		opacity: 100%;
-		transition: 0.3s;
-	}
-
-	span + .social-icons {
-		margin: 0 0 2px 0px;
-	}
-
-	.caption > span {
-		opacity: 60%;
-	}
-
-	.caption > a {
-		opacity: 60%;
-		transition: 0.3s;
-	}
-
-	.caption > a:hover {
-		opacity: 100%;
-		transition: 0.3s;
-	}
-
 
 }
 
 /* Tablet */
-@media screen and (min-width: 720px) {
+@media screen and (min-width: 929px) {
 
-	.footer {
-		margin-top: 1rem;
+
+	.header {
+		padding-top: 1rem;
 	}
 
-	.hero-logo {
-		height: 40px;
+	.header-logo {
+		height: 44px;
+		margin-top: 13px
+	}
+
+	.hamburger {
+		display: none;
+	}
+
+	.nav-menu {
+        position: relative;
+        left: 0;
+		opacity: 1;
+        background: var(--Rhino);
+        width: ;
+		height: ;
+		padding: 16px 0 0 0 !important;
+		transition: none;
+		z-index: 1;
+
+    }
+
+	.header li {
+		display: inline-block;
+		margin: 0 0 8px 0;
+	}
+
+	.header .button  {
+		margin-top: 0 !important;
+	}
+
+	.header .secondary  {
+		margin-top: 0 !important;
+	}
+
+	nav a {
+		color: var(--White);
+		transition: 0.4s;
+	}
+
+	.header .button-link a:hover {
+		color: var(--AzureRadiance);
+		transition: 0.4s;
+	}
+
+	.header .align-right {
+		text-align: right;
+		padding: 0 0 0 0;
+	}
+
+	.header .button-link {
+		margin-right: 0.3rem;
+		font-weight: 500;
+	}
+
+	.header .button-link a {
+		font-size: 16px;
+		font-weight: 500;
 	}
 
 }
+
+/* Desktop */
+@media screen and (min-width: 1024px) {
+
+	.header-logo {
+		height: 56px;
+	}
+
+	.header .button-link {
+		margin-right: 0.75rem;
+	}
+
+}
+
+
 
 /* Desktop */
 @media screen and (min-width: 1280px) {
@@ -219,14 +314,22 @@ body {
 /* Mobile */
 @media screen and (min-width: 0px) {
 
-	.background-image {
+	/* ----- Hero ----- */
+
+	.sec-hero {
+		background: var(--Rhino-Gradient);
+		padding: 4.5rem 0 0 0;
+		color: var(--White);
+	}
+
+	.sec-hero .background-image {
 		width: 100%;
 		max-width: 100%;
 		display: block;
 		overflow: hidden;
 		bottom: 0;
 		left: 0;
-		margin-top: -7rem;
+		margin-top: -5rem;
 	}
 
 	.sec-hero .background-image img {
@@ -235,16 +338,62 @@ body {
 		float: left;
 	}
 
-	.sec-hero {
-		background: var(--Rhino-Gradient);
-		padding: 4rem 0 0 0;
-		color: var(--White);
-		margin-bottom: 4rem;
-	}
-
 	.sec-hero > .wrapper {
 		z-index: 1;
 	}
+
+	.sec-hero h1, .sec-cta h1 {
+		color: var(--White)
+	}
+
+	.sec-hero .kicker {
+		font-size: 12px;
+		font-weight: 500;
+	}
+
+	.sec-hero div .secondary,
+	.header nav .secondary, .sec-cta div .secondary {
+		color: var(--White) !important;
+	}
+
+	.sec-hero div .secondary:hover,
+	.header nav .secondary:hover,
+	.sec-cta div .secondary:hover {
+		background-color: var(--BahamaBlue);
+		border-color: var(--BahamaBlue);
+		transition: 0.3s;
+	}
+
+	.sec-hero-scroll {
+		position: relative;
+		width: 2px;
+		padding: 4px 6px 6px 4px;
+		height: 10px;
+		border: 2px solid #fff;
+		border-radius: 25px;
+		box-sizing: content-box;
+		left: 50%;
+		margin-left: -9px;
+		transform: translateY(25vh);
+	}
+	.scroller {
+	  width: 4px;
+	  height: 4px;
+	  border-radius: 100%;
+	  background-color: #fff;
+	  animation-name: scroll;
+	  animation-duration: 2.2s;
+	  animation-timing-function: cubic-bezier(.15,.41,.69,.94);
+	  animation-iteration-count: infinite;
+	}
+
+	@keyframes scroll {
+	  0% { opacity: 0; }
+	  10% { transform: translateY(0); opacity: 1; }
+	  100% { transform: translateY(9px); opacity: 0;}
+	}
+
+	/* ----- Image Split ----- */
 
 	.sec-split {
 		margin: 4rem 0;
@@ -254,8 +403,65 @@ body {
 		width: 100%;
 	}
 
-	.sec-split .wrapper {
+	.sec-split .wrapper,
+	.sec-reviews .wrapper {
 		align-items: center;
+	}
+
+	/* ----- CTA ----- */
+
+	.sec-cta {
+		margin: 4rem 0;
+	}
+
+	.sec-cta-container {
+		background: var(--Rhino-Gradient);
+		padding: 2.25rem 33.332% 2.25rem 8.333%;
+		overflow: hidden;
+		border-radius: 8px;
+		max-height: 250px;
+	}
+
+	.sec-cta-content {
+		position: relative;
+		z-index: 1;
+	}
+
+	.sec-cta-image {
+		position: relative;
+		z-index: 0;
+	}
+
+	.sec-cta-image img {
+		margin: -7rem 0 -2.4rem 6.5rem;
+		width: 70vw;
+	}
+
+	/* ----- Reviews ----- */
+
+	.sec-reviews {
+		margin: 4rem 0;
+	}
+
+	.sec-reviews .align-left img {
+		border-radius: 8px;
+		position: relative;
+		width: 80%;
+		z-index: 1
+	}
+
+	.sec-reviews-container {
+		background: var(--Onahau);
+		position: relative;
+		width: 140px;
+		min-height: 40px;
+		margin: -2.5rem 0 0 auto;
+		padding: 1rem;
+		border-radius: 12px;
+		border: 16px;
+		border-style: solid;
+		border-color: var(--White);
+		z-index: 2;
 	}
 
 }
@@ -270,16 +476,28 @@ body {
 		float: right;
 	}
 
+	.sec-hero .kicker {
+		font-size: 14px;
+	}
+
+	.sec-cta-container {
+		padding: 2.25rem 33.332% 2.25rem 8.333%;
+	}
+
 }
 
 /* Desktop */
 @media screen and (min-width: 1280px) {
 
 	.sec-hero .background-image img {
-		width: 100vw;
-		max-width: 1366px;
-		max-height: 100vh;
+		width: 70vw;
+		max-width: 1266px;
+		max-height: 10vh;
 		margin: 0 0 0 0;
+	}
+
+	.sec-cta-container {
+		padding: 2.25rem 38.332% 2.25rem 8.333%;
 	}
 
 }
@@ -289,6 +507,11 @@ body {
 
 	.sec-hero .background-image img {
 		margin: 0 25vh 0 0;
+	}
+
+	.sec-cta-container {
+		padding: 2.25rem 43.332% 2.25rem 8.333%;
+
 	}
 
 }
@@ -302,9 +525,40 @@ body {
 /* Mobile */
 @media screen and (min-width: 0px) {
 
-	.button-margin {
-		margin-top: 1.15rem;
-		margin-top: 0.75rem;
+	.button {
+		font-size: 16px;
+		line-height: 28px;
+		font-weight: 500;
+		color: var(--White);
+		border: 2px;
+		border-style: solid;
+		border-color: var(--AzureRadiance);
+		background-color: var(--AzureRadiance);
+		display: inline-block;
+		padding: 5px 24px 5px 24px;
+		border-radius: 24px;
+		transition: 0.3s;
+		cursor: pointer;
+	}
+
+	.button-link {
+		font-size: 16px;
+		line-height: 28px;
+	}
+
+	.secondary {
+		color: var(--Rhino) !important;
+		background-color: transparent;
+		border: 2px;
+		border-style: solid;
+		border-color: var(--AzureRadiance);
+	}
+
+	.button > img {
+		widows: 16px;
+		height: 16px;
+		vertical-align: middle;
+		margin: 0 0 2px 12px;
 	}
 
 	.button:hover {
@@ -313,8 +567,22 @@ body {
 		transition: 0.3s;
 	}
 
+	.button.secondary:hover {
+		background-color: var(--Onahau);
+		border-color: var(--Onahau);
+		transition: 0.3s;
+	}
+
 	a {
 		text-decoration: none;
+	}
+
+	ul {
+		list-style: none;
+	}
+
+	li {
+		list-style: none;
 	}
 
 	:focus {
@@ -334,8 +602,14 @@ body {
 		margin-top: 16vh;
 	}
 
-	.button-margin {
-		margin-top: 1.15rem;
+	.button-link {
+		font-size: 16px;
+		line-height: 28px;
+	}
+
+	.button {
+		font-size: 16px;
+		line-height: 28px;
 	}
 
 }
@@ -470,3 +744,231 @@ body {
 }
 
 
+/* ----- -------------- ----- */
+/* ----- -------------- ----- */
+/* ----- ---Carousel--- ----- */
+/* ----- -------------- ----- */
+/* ----- -------------- ----- */
+
+
+/* Mobile */
+@media screen and (min-width: 0px) {
+
+	.sec-carousel {
+		background-color: var(--Alabaster);
+		padding: 0.5rem 0 0.25rem 0;
+	}
+
+	.carousel-item {
+		text-align: center;
+		color: var(--Rhino);
+		font-weight: 600;
+		line-height: 16px;
+	}
+
+	.slick-slide {
+		margin: 0px 20px;
+	}
+
+	.carousel-wrapper {
+		overflow: inherit;
+	}
+
+	.slick-slide img {
+		margin: 4px auto;
+		width: 70%;
+		max-width: 48px;
+		image-rendering: -webkit-optimize-contrast;
+	}
+
+	.slick-track::before, .slick-track::after {
+		display: table;
+		content: '';
+	}
+
+	.slick-track::after {
+		clear: both;
+	}
+
+	.slick-track {
+		padding: 1rem 0;
+	}
+
+	.slick-loading .slick-track {
+		visibility: hidden;
+	}
+
+	.slick-slide.slick-loading img {
+		display: none;
+	}
+
+	.slick-slide.dragging img {
+		pointer-events: none;
+	}
+
+	.slick-loading .slick-slide {
+		visibility: hidden;
+	}
+
+	.slick-arrow {
+		position: absolute;
+		top: 45%;
+		background: url(/static/images/carousel-control-hover.svg) center no-repeat;
+		border: none;
+		border-radius: 20px;
+		width: 1.15rem;
+    	height: 1.15rem;
+		background-size: 1.15rem;
+		text-indent: -10000px;
+		margin-top: -0.5rem;
+		z-index: 1;
+		transition: 0.4s;
+	}
+
+	.slick-arrow:hover {
+		background: url(/static/images/carousel-control.svg) center no-repeat;
+		transition: 0.4s;
+	}
+
+	.slick-arrow.slick-next {
+		right: -3%;
+		transform: rotate(180deg);
+	}
+
+	.slick-arrow.slick-prev {
+		left: -3%;
+	}
+
+}
+
+/* Tablet */
+@media screen and (min-width: 720px) {
+
+	.slick-arrow {
+    	width: 2rem;
+    	height: 2rem;
+		background-size: 1.25rem;
+		top: 40%;
+	}
+
+	.carousel-item {
+		line-height: 20px;
+	}
+
+	.slick-arrow.slick-next {
+		right: -3%;
+	}
+
+	.slick-arrow.slick-prev {
+		left: -3%;
+	}
+
+}
+
+/* Desktop */
+@media screen and (min-width: 1280px) {
+
+	.slick-arrow {
+		top: 37%;
+	}
+
+	.slick-arrow.slick-next {
+		right: -5%;
+	}
+
+	.slick-arrow.slick-prev {
+		left: -5%;
+	}
+
+}
+
+/* Desktop Large */
+@media screen and (min-width: 1700px) {
+
+	.slick-arrow.slick-next {
+		right: -7%;
+	}
+
+	.slick-arrow.slick-prev {
+		left: -7%;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+	.footer {
+		color: var(--White);
+		background: aqua;
+		margin-top: 1rem;
+		/* margin-bottom: 1rem; */
+		vertical-align: middle;
+	}
+
+	.contact-link {
+		padding-top: 0.25rem;
+		opacity: 50%;
+		transition: 0.3s;
+		text-align: right;
+	}
+
+	.contact-link a {
+		color: var(--White);
+	}
+
+	.contact-link:hover {
+		opacity: 100%;
+		transition: 0.3s;
+	}
+
+	.portfolio-link {
+		width: 24px;
+		margin: 2px 0 0 0;
+		opacity: 30%;
+		transition: 0.3s;
+	}
+
+	.portfolio-link:hover  {
+		opacity: 100%;
+		transition: 0.3s;
+	}
+
+	.social-icons {
+		width: 18px;
+		vertical-align: middle;
+		margin: 0 0 2px 10px;
+		opacity: 75%;
+		transition: 0.3s;
+	}
+
+	.social-icons:hover {
+		opacity: 100%;
+		transition: 0.3s;
+	}
+
+	span + .social-icons {
+		margin: 0 0 2px 0px;
+	}
+
+	.caption > span {
+		opacity: 60%;
+	}
+
+	.caption > a {
+		opacity: 60%;
+		transition: 0.3s;
+	}
+
+	.caption > a:hover {
+		opacity: 100%;
+		transition: 0.3s;
+	}
